# MyAnimeList.py

./: LICENSE  README.md  setup.cfg  setup.py
src/: __init__.py  get_anime_details.py  mal_client.py  search.py
src/fun/: delete.py  forum.py  get_anime_details.py  get_seasonal_anime.py  informations.py  key_file.py  list.py  ranking.py  search.py  suggestion.py  update.py
src/oauth2/: get_token.py  index.html  pcke.py  refresh.py  refresh_token.py  server.py  user_auth.py
test/: test_search.py
