[metadata]
name = MyAnimeList.py
version = 1.0.0
author = Romain Croughs
author_email = romain.croughs@example.com
description = Easy-to-use MyAnimeList API wrapper library for Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/itsKorzie/MyAnimeList.py
project_urls =
    Report an issue = https://github.com/itsKorzie/MyAnimeList.py/issues
    repository = https://github.com/itsKorzie/MyAnimeList.py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src